--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
   display: inline-block;
   width: 40px;
   height: 40px;
-  border: 1px solid black; 
+  border: 1px solid black;
 }
 
 .pixel {
   display: inline-block;
   width: 40px;
   height: 40px;
-  border: 1px solid black; 
+  border: 1px solid black;
+  background-color: white;
 }
