--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ table, tr, td {
 .pixel {
   width: 40px;
   height: 40px;
+  margin: 0;
+  padding: 0;
   background-color: white;
   border: 1px solid black;
 }
