--- a/style.css
+++ b/style.css
@@ -4,33 +4,41 @@ body {
 
 #color-palette {
   box-sizing:border-box;
-  display: grid;
-  gap: 15px;
-  grid-template-columns:repeat(auto-fit, minmax(200px, 1fr));
+  display:flex;
+  justify-content: center;
+  margin-bottom: 12px;
 }
 
 .color {
-  height: 80px;
+  height: 40px;
   pointer-events: painted;
   position: relative;
   size: 75px;
-  width: 90px;
+  width: 40px;
   display: inline-block;
   border: solid 1px black;
+  margin: 2px;
 }
 
-table {
-  width: 380px;
-  height: 40px;
-  border:solid black;
-  background-color: white;
+#pixel-board {
+  margin: 0 auto;
+  text-align: center;
+  line-height: 0px;
   
 }
+  
 
- td {
-   width: 100px;
-   height: 55px;
-   border-width: 1px;
-   background-color: white; 
+
+.pixel {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  background-color: white;
+  cursor: pointer;
+  } 
+ 
+
+ 
    
- }
+ 
