--- a/style.css
+++ b/style.css
@@ -48,6 +48,13 @@ body {
   } 
  
 
- 
+  button{
+    border: 0;
+    background-color:darkgray;
+    width: 60px;
+    height: 20px;
+    cursor: pointer;
+  
+  }
    
  
