--- a/style.css
+++ b/style.css
@@ -1,24 +1,9 @@
-.color {
+
+.color, .selected {
   border: 1px solid black;
   display: inline-block;
   height: 50px;
   width: 50px;
-}
-
-#color-one {
-  background-color: black;
-}
-
-#color-two {
-  background-color: red;
-}
-
-#color-tree {
-  background-color: cyan;
-}
-
-#color-four {
-  background-color: magenta;
 }
 
 #pixel-board {
@@ -33,6 +18,3 @@
   display: inline-block;
   background-color: white;
 }
-
-
-
