--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
-table, tr, td {
-  border-collapse: collapse;
-}
-
 #color-palette {
-  margin-bottom: 5px;
+  display: inline-block;
+  margin: 2,5px;
 } 
 
 .color { 
@@ -15,6 +12,7 @@ table, tr, td {
 .pixel {
   width: 40px;
   height: 40px;
+  display: inline-block;
   background-color: white;
   border: 1px solid black;
 }
