--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body {
-  margin-left: 50px;
+  /* margin-left: 50px; */
   background-color: rgb(234, 226, 183);
+  font-family: 'Rubik', sans-serif;
+  /* width: 50%; */
+}
+
+#title {
+  text-align: center;
 }
 
 #color-palette {
@@ -9,9 +15,16 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  flex-wrap: wrap;
   border: 1px solid rgb(0, 0, 0);
   margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 8px;
+}
+
+#input-and-but {
+  width: 302px;
+  margin: auto;
 }
 
 .color {
@@ -19,10 +32,11 @@ body {
   height: 50px;
   display: flex;
   border: 1px solid rgb(0, 0, 0);
+  border-radius: 8px;
 }
 
 #pixel-board {
-  margin: 50px;
+  margin: 50px auto;
 }
 
 .pixel {
@@ -37,6 +51,36 @@ table {
   border-collapse: collapse;
 }
 
+button, input {
+  border: none;
+  border-radius: 8px;
+  color: white;
+  padding: 8px 8px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
 #clear-board {
-  margin-right: 35px;
+  background-color: rgb(214, 40, 40); /* Green */
+  
+  /* margin-right: ; */
+}
+
+
+#generate-board {
+  background-color: rgb(247, 127, 0);
+  float: right;
+  clear: right;
+}
+
+#board-size {
+  color: black;
+  /* align: right; */
+  /* display: inline-block; */
+  margin-left: 115px;
+  /* margin-right: 5px; */
+  /* float: right; */
+  width: 50px;
 }
