--- a/style.css
+++ b/style.css
@@ -1,32 +1,94 @@
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
 body {
   text-align: center;
-  background-image: url('imagens/irmão-do-jorel-reprodução.png');
+  background-color: #87c1dc;
   background-size: cover;
   background-repeat: no-repeat;
-}
-
-#pixel-board {
-  margin-left: 920px;
-  display: flex;
-  flex-wrap: wrap;
-  width: 251px;
-}
-
-#color-palette {
-  margin-left: 52%;
+  box-sizing: border-box;
+  font-family: 'Bangers', cursive;
+  letter-spacing: 4px;
+  font-size: 18px;
 }
 
 h1 {
-  color: white;
-  font-size: 45px;
-  margin-left: 52%;
+  color: black;
+  font-size: 50px;
+}
+
+#pixel-board {
+  /* display: flex;
+  justify-content: center;
+  flex-wrap: wrap; */
+  /* width: 251px;
+  margin: 20px;  */
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+#color-palette {
+display: flex;
+justify-content: center;
+}
+
+.btn-clear{
+display: flex;
+justify-content: center;
+margin-top: 20px;
+}
+
+#clear-board {
+  font-size: 19px;
+  background-color: transparent;
+  border: solid 1px #ff0505;
+  border-radius: 0.5em;
+  box-shadow: 2px 2px 2px red;
+  width: 5%;
+  padding: 4px;
+  font-family: 'Staatliches', cursive;
+  letter-spacing: 2px;
+}
+
+#clear-board:hover { 
+  font-size: 20px;
+}
+
+.numberPixel input {
+  width: 6%;
+  padding: 4px;
+  border-radius: 15px;
+}
+
+#generate-board{
+  font-size: 18px;
+  background-color: #2fc18c;
+  border: 2px solid  #036b52;
+  box-shadow: 3px 3px 3px #036b52;
+  border-radius: 15px;
+  width: 4%;
+  font-family: 'Staatliches', cursive;
+  letter-spacing: 3px;
 }
 
 .color {
   display: inline-block;
+  margin: 2px;
   border: solid black 1px;
   width: 40px;
   height: 40px;
+}
+
+.pixel {
+  display: inline-block;
+  border: solid black 1px;
+  width: 40px;
+  height: 40px;
+  margin-bottom: -4px;
 }
 
 #colorBlack {
@@ -63,18 +125,4 @@ h1 {
 
 .color4 {
   background-color: white;
-}
-
-.pixel {
-  display: inline-block;
-  border: solid black 1px;
-  width: 40px;
-  height: 40px;
-}
-
-#clear-board {
-  display: flex;
-  margin-left: 300px;
-  margin-top: 10px;
-  margin-bottom: 10px;
 }
